# asset-tokenization

./: readME.md
assets/: Cargo.toml  lib.rs
hangman/: app.js  package.json
hangman/views/: index.ejs
rps/: app.js  contract.cjs  contract.ts  metadata.js  package-lock.json  package.json  pnpm-lock.yaml
rps/.papi/: polkadot-api.json
rps/.papi/contracts/: assets.json
rps/.papi/descriptors/: package.json
rps/public/css/: style.css
rps/public/js/: main.js  script.js
rps/views/: chain-menu.ejs  chain-x.ejs  index.ejs
